# core/db/redis/chat2/model.go
@@ -1,0 +1,9 @@
+
+// models/room.go
+package chat2
+
+// Message struct defines the structure of a chat message
+type Message struct {
+    Username string `json:"username"`
+    Text     string `json:"text"`
+}
